--- a/crates/css_ast/Cargo.toml
+++ b/crates/css_ast/Cargo.toml
@@ -16,6 +16,7 @@ bench = false
 css_lexer = { workspace = true }
 css_parse = { workspace = true }
 csskit_proc_macro = { workspace = true }
+csskit_derives = { workspace = true }
 
 bumpalo = { workspace = true, features = ["collections", "boxed"] }
 miette = { workspace = true, features = ["derive"] }
