css_ast/css_parse: derive ToCursors for many more types

--- a/crates/css_parse/Cargo.toml
+++ b/crates/css_parse/Cargo.toml
@@ -15,6 +15,7 @@ bench = false
 
 [dependencies]
 css_lexer = { workspace = true, features = ["miette"] }
+csskit_derives = { workspace = true }
 
 bumpalo = { workspace = true }
 smallvec = { workspace = true }
