--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,13 +21,25 @@ jobs:
             target: x86_64-pc-windows-msvc
             code-target: win32-x64
 
+          - os: windows-latest
+            target: aarch64-pc-windows-msvc
+            code-target: win32-arm64
+
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             code-target: linux-x64
 
+          - os: ubuntu-latest
+            target: aarch64-unknown-linux-gnu
+            code-target: linux-arm64
+
           - os: macos-latest
             target: x86_64-apple-darwin
             code-target: darwin-x64
+
+          - os: macos-latest
+            target: aarch64-apple-darwin
+            code-target: darwin-arm64
 
     name: Build & Test on ${{ matrix.code-target }}
     runs-on: ${{ matrix.os }}
