--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -66,3 +66,10 @@ jobs:
         uses: Swatinem/rust-cache@v2
         # Ensure that docs can also build
       - run: cargo doc --all-features --no-deps
+
+  results:
+    runs-on: ubuntu-latest
+    needs: [build, docs]
+    steps:
+      - name: results
+        run: echo ${{ toJSON(needs.*.result) }}
