--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,12 +1,16 @@
-# mostly copied from https://raw.githubusercontent.com/web-infra-dev/oxc/main/.github/workflows/release_cli.yml
 name: test
 on:
   push:
     branches: ["main"]
   pull_request:
+
 permissions:
   contents: read
   id-token: write
+
+env:
+  CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: aarch64-linux-gnu-gcc
+
 jobs:
   build:
     strategy:
@@ -17,13 +21,25 @@ jobs:
             target: x86_64-pc-windows-msvc
             code-target: win32-x64
 
+          - os: windows-latest
+            target: aarch64-pc-windows-msvc
+            code-target: win32-arm64
+
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             code-target: linux-x64
 
+          - os: ubuntu-latest
+            target: aarch64-unknown-linux-gnu
+            code-target: linux-arm64
+
           - os: macos-latest
             target: x86_64-apple-darwin
             code-target: darwin-x64
+
+          - os: macos-latest
+            target: aarch64-apple-darwin
+            code-target: darwin-arm64
 
     name: Build & Test on ${{ matrix.code-target }}
     runs-on: ${{ matrix.os }}
@@ -40,8 +56,20 @@ jobs:
         with:
           shared-key: release-${{ matrix.target }}
       - run: cargo test --all-features
-        env:
-          CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: aarch64-linux-gnu-gcc
       - run: cargo fmt --check
-        env:
-          CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: aarch64-linux-gnu-gcc
+
+  docs:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Cache
+        uses: Swatinem/rust-cache@v2
+        # Ensure that docs can also build
+      - run: cargo doc --all-features --no-deps
+
+  results:
+    runs-on: ubuntu-latest
+    needs: [build, docs]
+    steps:
+      - name: results
+        run: echo '${{ toJSON(needs.*.result) }}'
