(csskit_derives): clean up derive code

--- a/crates/csskit_derives/Cargo.toml
+++ b/crates/csskit_derives/Cargo.toml
@@ -17,6 +17,7 @@ proc-macro = true
 syn = { workspace = true, features = ["extra-traits"] }
 quote = { workspace = true }
 proc-macro2 = { workspace = true }
+itertools = { workspace = true }
 
 [features]
 default = []
