--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -68,8 +68,13 @@ jobs:
       - run: cargo doc --all-features --no-deps
 
   results:
+    if: always()
     runs-on: ubuntu-latest
     needs: [build, docs]
     steps:
-      - name: results
-        run: echo '${{ toJSON(needs.*.result) }}'
+      - run: |
+          outcome='${{ toJSON(needs.*.result) }}'
+          if [[ $(echo $outcome | jq -e 'all(. == "success")') != "true" ]]; then
+            echo "Some required steps failed!";
+            exit 1;
+          fi
