hold back criterion to 0.5.1 due to pprof dependency issues

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,7 +68,7 @@ serde_json = { version = "1.0.140" }
 
 # Testing, benchmarking
 similar = { version = "2.7.0" }
-criterion = { version = "0.6.0" }
+criterion = { version = "0.5.1" } # Help back for pprof (https://github.com/tikv/pprof-rs/pull/271)
 pprof = { version = "0.15.0" }
 flate2 = { version = "1.1.2" }
 insta = { version = "1.43.1" }
