--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -7,6 +7,8 @@ jobs:
     if: contains(github.event.pull_request.labels.*.name, 'bench')
     name: Benchmark on linux
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
     steps:
       - uses: actions/checkout@v4
         with:
