csskit_proc_macro/css_ast: use heck for string transforms
We've got a few functions to do simple string transforms like camel/snake/title/pascal case, but these are kind of
scattered around the codebase. We already have `heck` as a dependency in our cargo.lock so it seems useful to simply use
heck's string transforms instead of our hand rolled variants.

--- a/crates/css_ast/Cargo.toml
+++ b/crates/css_ast/Cargo.toml
@@ -33,6 +33,7 @@ grep-regex = { workspace = true }
 grep-searcher = { workspace = true }
 grep-matcher = { workspace = true }
 glob = { workspace = true }
+heck = { workspace = true }
 
 [dev-dependencies]
 css_parse = { workspace = true, features = ["testing"] }
