--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,6 +61,7 @@ thiserror = { version = "2.0.12" }
 syn = { version = "2.0.104" }
 quote = { version = "1.0.40" }
 proc-macro2 = { version = "1.0.95" }
+heck = { version = "0.5.0" }
 
 # Serialization
 serde = { version = "1.0.219" }
