--- a/crates/csskit_proc_macro/Cargo.toml
+++ b/crates/csskit_proc_macro/Cargo.toml
@@ -20,6 +20,7 @@ syn = { workspace = true, features = ["extra-traits"] }
 quote = { workspace = true }
 proc-macro2 = { workspace = true }
 itertools = { workspace = true }
+heck = { workspace = true }
 
 [dev-dependencies]
 prettyplease = { workspace = true }
