css_ast: tidy up build script
The build script was getting a little unwieldy because:

- It was all in one file with not much separation going on.
- It has a big old chunk of grep code which was intermingled among debug lines and cargo build lines.
- It did a bunch of string manipulation to get the matches from grep into something resembling idents.
- It threw those strings into a bunch of other strings, to write out as Rust, rather than using something a little more
	robust like Syn.

This is an attempt to start to fix some of those issues and clean it up a bit:

- I've split a major chunk into a separate library, which means it can be reused, as well as better
	tested/modified/separated further. But also...
- The grep code is now separated (in the library) from the cargo build code, and so cargo logs for example aren't quite so tangled within it all.
- The new library outputs `syn::Type`s rather than strings, so there is a much better sense that the matches actually
	parse to valid Rust.
- The build.rs now uses syn/quote to generate Rust code, which gives me a lot more confidence that it will generate
	syntactically valid rust. Also it's much easier to read to boot.

Overall perhaps not _less_ code, but definitely cleaner code.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ csskit_proc_macro = { version = "0.0.0", path = "crates/csskit_proc_macro" }
 css_parse = { version = "0.0.1", path = "crates/css_parse" }
 css_lexer = { version = "0.0.1", path = "crates/css_lexer" }
 css_ast = { version = "0.0.0", path = "crates/css_ast" }
+csskit_source_finder = { version = "0.0.0", path = "crates/csskit_source_finder" }
 csskit_transform = { version = "0.0.0", path = "crates/csskit_transform" }
 csskit_highlight = { version = "0.0.0", path = "crates/csskit_highlight" }
 csskit_lsp = { version = "0.0.0", path = "crates/csskit_lsp" }
@@ -69,7 +70,7 @@ serde_json = { version = "1.0.140" }
 
 # Testing, benchmarking
 similar = { version = "2.7.0" }
-criterion = { version = "0.5.1" } # Help back for pprof (https://github.com/tikv/pprof-rs/pull/271)
+criterion = { version = "0.5.1" }     # Help back for pprof (https://github.com/tikv/pprof-rs/pull/271)
 pprof = { version = "0.15.0" }
 flate2 = { version = "1.1.2" }
 insta = { version = "1.43.1" }
