--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,9 @@ csskit_proc_macro = { version = "0.0.0", path = "crates/csskit_proc_macro" }
 css_parse = { version = "0.0.1", path = "crates/css_parse" }
 css_lexer = { version = "0.0.1", path = "crates/css_lexer" }
 css_ast = { version = "0.0.0", path = "crates/css_ast" }
+css_lint = { version = "0.0.0", path = "crates/css_lint" }
 csskit_source_finder = { version = "0.0.0", path = "crates/csskit_source_finder" }
+csskit_ast = { version = "0.0.0", path = "crates/csskit_ast" }
 csskit_transform = { version = "0.0.0", path = "crates/csskit_transform" }
 csskit_highlight = { version = "0.0.0", path = "crates/csskit_highlight" }
 csskit_lsp = { version = "0.0.0", path = "crates/csskit_lsp" }
