--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -99,8 +99,8 @@ jobs:
           outcome='${{ toJSON(needs.*.result) }}'
           if [[ $(echo $outcome | jq -e 'all(. == "success")') != "true" ]]; then
             echo "Some required steps failed!";
-            gh pr review --request-changes --body "Some required steps failed!";
+            gh pr review ${{ github.event.number }} --request-changes --body "Some required steps failed!";
             exit 1;
           else
-            gh pr review --approve --body "All CI jobs have passed. Approving.";
+            gh pr review ${{ github.event.number }} --approve --body "All CI jobs have passed. Approving.";
           fi
