Install local deps during mise install
Signed-off-by: Keith Cirkel <keithamus@users.noreply.github.com>

--- a/.github/workflows/generate-all-values.yml
+++ b/.github/workflows/generate-all-values.yml
@@ -23,6 +23,7 @@ jobs:
           echo "$HOME/.local/share/mise/shims" >> $GITHUB_PATH
           mise trust
           mise install
+          mise run install 
           mise run generate-all-values
           cargo fmt
       - name: Make PR
