--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -10,22 +10,24 @@ jobs:
     permissions:
       pull-requests: write
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #v4.2.2
         with:
           submodules: 'true'
-      - run: rustup target add x86_64-unknown-linux-gnu
-      - name: Cache
-        uses: Swatinem/rust-cache@v2
+      - name: Mise
+        uses: jdx/mise-action@c37c93293d6b742fc901e1406b8f764f6fb19dac #v2.4.4
+      - name: Rust cache
+        uses: swatinem/rust-cache@98c8021b550208e191a6a3145459bfc9fb29c4c0 #v2.8.0
         with:
-          shared-key: release-x86_64-unknown-linux-gnu
-      - id: cache-target
-        name: Cache CI Benchmarks
-        uses: actions/cache@v4
+          shared-key: global-rust-cache
+      - name: Cache CI Benchmarks
+        id: cache-target
+        uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 #v4.2.3
         with:
             key: ${{ runner.os }}-${{ github.ref }}
             path: |
                 ./target/criterion
       - name: Criterion Compare PRs
-        uses: boa-dev/criterion-compare-action@59f4d964c5f19d7f13d36f5c0944b18ce6652cb0
+        uses: boa-dev/criterion-compare-action@adfd3a94634fe2041ce5613eb7df09d247555b87 #v3.2.4
         with:
           branchName: ${{ github.base_ref }}
