--- a/.github/workflows/generate-all-values.yml
+++ b/.github/workflows/generate-all-values.yml
@@ -9,28 +9,31 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       pull-requests: write
+      contents: write
     steps:
-      - run: |
-          git config --global core.autocrlf false
-          git config --global core.eol lf
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #v4.2.2
         with:
           submodules: 'true'
-      - name: Install & Generate
-        run: |
-          curl https://mise.run | sh
-          echo "$HOME/.local/share/mise/bin" >> $GITHUB_PATH
-          echo "$HOME/.local/share/mise/shims" >> $GITHUB_PATH
-          mise trust
-          mise install
-          mise run install 
-          mise run generate-all-values
-          cargo fmt
+      - name: Mise
+        uses: jdx/mise-action@c37c93293d6b742fc901e1406b8f764f6fb19dac #v2.4.4
+      - name: Rust cache
+        uses: swatinem/rust-cache@98c8021b550208e191a6a3145459bfc9fb29c4c0 #v2.8.0
+        with:
+          shared-key: global-rust-cache
+      - name: Ensure cargo fmt is installed
+        run: rustup component add rustfmt
+      - name: Check fmt
+        run: cargo fmt --check
+      - name: Generate all values
+        run: mise run generate-all-values
       - name: Make PR
         run: |
-          git add crates/css_ast/src/values/ && \
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add crates/css_ast/src/values/
           git commit --message 'Autogenerate all values' && \
-          git push --force origin HEAD refs/heads/generate-all-values && \
-          gh pr create --fill-verbose --head generate-all-values
+          git push --force origin HEAD:refs/heads/generate-all-values && \
+          gh pr create --fill-verbose --head HEAD
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
