--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,43 +44,65 @@ jobs:
     name: Build & Test on ${{ matrix.code-target }}
     runs-on: ${{ matrix.os }}
     steps:
-      - run: |
+      - name: Configure git line endings
+        run: |
           git config --global core.autocrlf false
           git config --global core.eol lf
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #v4.2.2
         with:
           submodules: "true"
-      - run: rustup target add ${{ matrix.target }}
-      - name: Cache
-        uses: Swatinem/rust-cache@v2
+      - name: Mise
+        uses: jdx/mise-action@c37c93293d6b742fc901e1406b8f764f6fb19dac #v2.4.4
+      - name: Rust cache
+        uses: swatinem/rust-cache@98c8021b550208e191a6a3145459bfc9fb29c4c0 #v2.8.0
         with:
-          shared-key: release-${{ matrix.target }}
+          shared-key: test-${{ matrix.target }}
       - run: cargo test --all-features
 
   clippy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Cache
-        uses: Swatinem/rust-cache@v2
+      - name: Checkout
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #v4.2.2
+      - name: Mise
+        uses: jdx/mise-action@c37c93293d6b742fc901e1406b8f764f6fb19dac #v2.4.4
+      - name: Ensure cargo clippy is installed
+        run: rustup component add clippy
+      - name: Rust cache
+        uses: swatinem/rust-cache@98c8021b550208e191a6a3145459bfc9fb29c4c0 #v2.8.0
+        with:
+          shared-key: global-rust-cache
         # Ensure clippy is happy with us
       - run: RUSTFLAGS="-Dwarnings" cargo clippy
 
   fmt:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Cache
-        uses: Swatinem/rust-cache@v2
+      - name: Checkout
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #v4.2.2
+      - name: Mise
+        uses: jdx/mise-action@c37c93293d6b742fc901e1406b8f764f6fb19dac #v2.4.4
+      - name: Ensure cargo fmt is installed
+        run: rustup component add rustfmt
+      - name: Rust cache
+        uses: swatinem/rust-cache@98c8021b550208e191a6a3145459bfc9fb29c4c0 #v2.8.0
+        with:
+          shared-key: global-rust-cache
         # Ensure that everything is nicely formatted
       - run: cargo fmt --check
 
   docs:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Cache
-        uses: Swatinem/rust-cache@v2
+      - name: Checkout
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #v4.2.2
+      - name: Mise
+        uses: jdx/mise-action@c37c93293d6b742fc901e1406b8f764f6fb19dac #v2.4.4
+      - name: Rust cache
+        uses: swatinem/rust-cache@98c8021b550208e191a6a3145459bfc9fb29c4c0 #v2.8.0
+        with:
+          shared-key: global-rust-cache
         # Ensure that docs can also build
       - run: cargo doc --all-features --no-deps
 
@@ -93,7 +115,8 @@ jobs:
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #v4.2.2
       - name: Check Results
         run: |
           outcome='${{ toJSON(needs.*.result) }}'
