--- a/.github/workflows/generate-all-values.yml
+++ b/.github/workflows/generate-all-values.yml
@@ -31,9 +31,11 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
+          git update-ref -d refs/heads/generate-all-values
+          git switch -c generate-all-values
           git add crates/css_ast/src/values/
           git commit --message 'Autogenerate all values' && \
           git push --force origin HEAD:refs/heads/generate-all-values && \
-          gh pr create --fill-verbose --head HEAD
+          gh pr create --fill-verbose --head generate-all-values
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
