--- a/.github/workflows/generate-all-values.yml
+++ b/.github/workflows/generate-all-values.yml
@@ -1,5 +1,7 @@
 name: Generate all values
 on:
+  pull_request:
+    
   workflow_dispatch:
   schedule:
     - cron: '0 0 * * 1'
@@ -34,8 +36,8 @@ jobs:
           git update-ref -d refs/heads/generate-all-values
           git switch -c generate-all-values
           git add crates/css_ast/src/values/
-          git commit --message 'Autogenerate all values' && \
+          git commit --message 'Regenerate css_ast/src/values from csswg drafts' && \
           git push --force origin HEAD:refs/heads/generate-all-values && \
-          gh pr create --fill-verbose --head generate-all-values
+          gh pr create --title 'Regenerate css_ast/src/values from csswg drafts' --body "Updates to the latest specs"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
