try to auto merge auto generated values prs

--- a/.github/workflows/generate-all-values.yml
+++ b/.github/workflows/generate-all-values.yml
@@ -37,5 +37,6 @@ jobs:
           git commit --message 'Regenerate css_ast/src/values from csswg drafts' && \
           git push --force origin HEAD:refs/heads/generate-all-values && \
           gh pr create --title 'Regenerate css_ast/src/values from csswg drafts' --body "Updates to the latest specs"
+          gh pr merge --auto --delete-branch --squash "$BRANCH_NAME"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
