--- a/packages/csskit_vscode/package.json
+++ b/packages/csskit_vscode/package.json
@@ -110,22 +110,20 @@
 		"onLanguage:css"
 	],
 	"dependencies": {
-		"@vscode/test-cli": "^0.0.11",
-		"vscode-languageclient": "^9.0.1"
+		"vscode-languageclient": "9.0.1"
 	},
 	"devDependencies": {
-		"@types/mocha": "^10.0.10",
-		"@types/node": "^24.1.0",
-		"@types/vscode": "^1.102.0",
-		"@typescript-eslint/eslint-plugin": "^8.16.0",
-		"@typescript-eslint/parser": "^8.16.0",
-		"@vscode/test-electron": "^2.5.2",
-		"esbuild": "^0.25.0",
-		"mocha": "^11.0.0",
-		"oxlint": "^1.0.0",
-		"prettier": "^3.4.1",
-		"tinyglobby": "^0.2.10",
-		"typescript": "^5.7.2"
+		"@types/mocha": "10.0.10",
+		"@types/node": "24.1.0",
+		"@types/vscode": "1.102.0",
+		"@vscode/test-cli": "0.0.11",
+		"@vscode/test-electron": "2.5.2",
+		"esbuild": "0.25.8",
+		"mocha": "11.7.1",
+		"oxlint": "1.9.0",
+		"prettier": "3.6.2",
+		"tinyglobby": "0.2.14",
+		"typescript": "5.9.2"
 	},
 	"engines": {
 		"vscode": "^1.95.0"
