--- a/website/package.json
+++ b/website/package.json
@@ -17,33 +17,33 @@
 		"start": "eleventy --serve"
 	},
 	"dependencies": {
-		"@codemirror/lang-css": "^6.3.0",
-		"@codemirror/lang-json": "^6.0.1",
-		"@codemirror/lang-rust": "^6.0.1",
-		"@codemirror/lang-sass": "^6.0.2",
-		"@codemirror/language": "^6.10.3",
-		"@codemirror/lint": "^6.8.2",
-		"@codemirror/state": "^6.4.1",
-		"@codemirror/view": "^6.34.2",
-		"codemirror": "^6.0.1",
+		"@codemirror/lang-css": "6.3.1",
+		"@codemirror/lang-json": "6.0.2",
+		"@codemirror/lang-rust": "6.0.2",
+		"@codemirror/lang-sass": "6.0.2",
+		"@codemirror/language": "6.11.2",
+		"@codemirror/lint": "6.8.5",
+		"@codemirror/state": "6.5.2",
+		"@codemirror/view": "6.38.1",
+		"codemirror": "6.0.2",
 		"csskit_wasm": "../crates/csskit_wasm/pkg/"
 	},
 	"devDependencies": {
-		"@11ty/eleventy": "^3.0.0",
-		"@11ty/eleventy-plugin-rss": "^2.0.2",
-		"@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
-		"@manustays/eleventy-plugin-generate-social-images": "^4.1.0",
-		"cssnano": "^7.0.6",
-		"esbuild": "^0.25.0",
-		"esbuild-plugin-wasm": "^1.1.0",
-		"glob": "^11.0.0",
-		"html-minifier": "^4.0.0",
-		"open-props": "^1.7.7",
-		"postcss-combine-duplicated-selectors": "^10.0.3",
-		"postcss-import": "^16.1.0",
-		"postcss-jit-props": "^1.0.14",
-		"postcss-preset-env": "^10.0.9",
-		"sharp": "^0.34.0",
-		"wasm-pack": "^0.13.1"
+		"@11ty/eleventy": "3.1.2",
+		"@11ty/eleventy-plugin-rss": "2.0.4",
+		"@11ty/eleventy-plugin-syntaxhighlight": "5.0.2",
+		"@manustays/eleventy-plugin-generate-social-images": "4.1.0",
+		"cssnano": "7.1.0",
+		"esbuild": "0.25.8",
+		"esbuild-plugin-wasm": "1.1.0",
+		"glob": "11.0.3",
+		"html-minifier": "4.0.0",
+		"open-props": "1.7.16",
+		"postcss-combine-duplicated-selectors": "10.0.3",
+		"postcss-import": "16.1.1",
+		"postcss-jit-props": "1.0.16",
+		"postcss-preset-env": "10.2.4",
+		"sharp": "0.34.3",
+		"wasm-pack": "^0.0.0"
 	}
 }
