--- a/.mise.toml
+++ b/.mise.toml
@@ -1,5 +1,5 @@
 [tools]
-rust = { version = "1.88.0", components = "rustfmt,clippy" }
+rust = { version = "1.88.0", components = "rustfmt,clippy", targets = "wasm32-unknown-unknown" }
 deno = "2.4.3"
 node = "24.5.0"
 "cargo:cargo-insta" = "1.43.1"
